--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -17,18 +17,14 @@ jobs:
     strategy:
       matrix:
         os: [macos-10.15, windows-2019]
-        python-version: ['3.7', '3.8', '3.9']
-        exclude:
-          - os: macos-10.15
-            python-version: '3.10'
-          - os: windows-2019
-            python-version: '3.10'
 
     steps:
       - uses: actions/checkout@v2
 
       # Used to host cibuildwheel
       - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
 
       - name: Install dependencies for macOS
         if: startsWith(matrix.os, 'macos')
