--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -3,8 +3,8 @@ name: Build
 on: [push, pull_request]
 
 env:
-  CIBW_BUILD: cp37-* cp38-* cp39-*
-  CIBW_SKIP: cp310-*
+  CIBW_BUILD: cp37-* cp38-* cp39-* cp310-*
+  CIBW_SKIP: cp311-*
   CIBW_ARCHS_WINDOWS: "AMD64"
   CIBW_ARCHS_MACOS: "x86_64"
   CIBW_ARCHS_LINUX: "x86_64"
@@ -43,3 +43,9 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           path: ./wheelhouse/*.whl
+      
+      - name: Upload binaries to release
+        uses: softprops/action-gh-release@v1
+        if: ${{startsWith(github.ref, 'refs/tags/') }}
+        with:
+          files: ./wheelhouse/*.whl
