--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -1,19 +1,27 @@
 name: Build 
 
-on: [push, pull_request]
+#on: [push, pull_request]
+on:
+  push:
+    tags:        
+      - '**'
 
 env:
-  CIBW_BUILD: cp37-* cp38-* cp39-* cp310-*
-  CIBW_SKIP: cp311-* cp312-*
+  CIBW_BUILD: cp37-* cp38-* cp39-* cp310-* cp311-*
+  CIBW_SKIP: cp311-win_amd64 cp312-*
   CIBW_ARCHS_WINDOWS: "AMD64"
   CIBW_ARCHS_MACOS: "x86_64 arm64"
   CIBW_ARCHS_LINUX: "x86_64"
-  CIBW_BEFORE_BUILD_WINDOWS: python .github/workflows/prepare.py && python -m pip install attrdict3
+  CIBW_BEFORE_BUILD_WINDOWS: python .github/workflows/prepare.py && python -m pip install attrdict3 requests
   CIBW_BEFORE_BUILD_MACOS: python -m pip install attrdict3
   CIBW_BEFORE_BUILD_LINUX: python -m pip install attrdict3
 
 jobs:
   build_wheels:
+    
+    permissions:
+      contents: write
+    
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -27,6 +35,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
+          cache: 'pip'
 
       - name: Install dependencies for macOS
         if: startsWith(matrix.os, 'macos')
@@ -55,6 +64,10 @@ jobs:
 
 
   build_sdist:
+    
+    permissions:
+      contents: write
+    
     name: Build source package
     runs-on: macos-11
     steps:
