--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -7,14 +7,16 @@ on:
       - '**'
 
 env:
-  CIBW_BUILD: cp37-* cp38-* cp39-* cp310-* cp311-*
-  CIBW_SKIP: cp311-win_amd64 cp312-*
+  #CIBW_BUILD_FRONTEND: "pip; args: --no-build-isolation"
+  CIBW_BUILD: cp38-win_amd64 cp39-* cp310-* cp311-* cp312-*
+  CIBW_SKIP: cp37-* cp38-macosx* 
   CIBW_ARCHS_WINDOWS: "AMD64"
   CIBW_ARCHS_MACOS: "x86_64 arm64"
   CIBW_ARCHS_LINUX: "x86_64"
-  CIBW_BEFORE_BUILD_WINDOWS: python .github/workflows/prepare.py && python -m pip install attrdict3 requests
-  CIBW_BEFORE_BUILD_MACOS: python -m pip install attrdict3
-  CIBW_BEFORE_BUILD_LINUX: python -m pip install attrdict3
+  CIBW_ENVIRONMENT_MACOS: CFLAGS='-arch x86_64 -arch arm64' CXXFLAGS='-arch x86_64 -arch arm64'
+  CIBW_BEFORE_BUILD_WINDOWS: python .github/workflows/prepwin.py && python -m pip install numpy cython
+  CIBW_BEFORE_BUILD_MACOS: python -m pip install numpy cython
+  CIBW_BEFORE_BUILD_LINUX: python -m pip install numpy cython
 
 jobs:
   build_wheels:
@@ -26,7 +28,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-11.0, windows-2019]
+        os: [macos-11.0, windows-2022]
 
     steps:
       - uses: actions/checkout@v3
@@ -40,17 +42,32 @@ jobs:
       - name: Install dependencies for macOS
         if: startsWith(matrix.os, 'macos')
         run: |
-          brew install fftw
-          brew install wxpython
+          brew install llvm libomp
+          bash .github/workflows/prepmacos.sh
 
       - name: Install dependencies
-        run: python -m pip install attrdict3 wxpython numpy vtk h5py pillow requests
+        run: python -m pip install attrdict3 wxpython numpy vtk h5py pillow requests cython
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.12.0
+        run: python -m pip install cibuildwheel==2.16.2
 
-      - name: Build wheels
+      - name: Build wheels - macOS
+        if: startsWith(matrix.os, 'macos')
         run: python -m cibuildwheel --output-dir wheelhouse
+        env:
+          CIBW_ARCHS_MACOS: "x86_64 arm64"
+          CIBW_ENVIRONMENT: CFLAGS='-arch x86_64 -arch arm64' CXXFLAGS='-arch x86_64 -arch arm64'
+          CC: /usr/local/opt/llvm/bin/clang
+          CXX: /usr/local/opt/llvm/bin/clang
+          C_INCLUDE_PATH: /usr/local/include
+          CPLUS_INCLUDE_PATH: /usr/local/include
+          LIBRARY_PATH: /usr/local/lib
+
+
+      - name: Build wheels - Windows
+        if: startsWith(matrix.os, 'windows')
+        run: python -m cibuildwheel --output-dir wheelhouse
+
 
       - uses: actions/upload-artifact@v3
         with:
@@ -61,7 +78,6 @@ jobs:
         if: ${{startsWith(github.ref, 'refs/tags/') }}
         with:
           files: ./wheelhouse/*.whl
-
 
   build_sdist:
     
@@ -79,16 +95,14 @@ jobs:
   
       - name: Install required Python packages
         run: |
-          brew install fftw
-          brew install wxpython
           python -m pip install --upgrade pip setuptools wheel
           python -m pip install build
           python -m pip install attrdict3
-          python -m pip install wxpython numpy vtk h5py pillow requests
+          python -m pip install wxpython numpy vtk h5py pillow requests cython
 
       - name: Build sdist
         run: |
-          python -m build --sdist --no-isolation --skip-dependency-check
+          python -m build --sdist
           
       - uses: actions/upload-artifact@v3
         with:
@@ -99,3 +113,5 @@ jobs:
         if: ${{startsWith(github.ref, 'refs/tags/') }}
         with:
           files: ./dist/*
+
+
